--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -104,7 +104,7 @@ a:active
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
-    word-spacing: var(--nav-item-letter-spacing);
+    letter-spacing: var(--nav-item-letter-spacing);
     display: var(--nav-item-display);
     margin: var(--nav-item-margin);    
 }
@@ -160,7 +160,7 @@ a:active
     --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
-    --nav-item-margin: 0rem 0rem 3rem;
+    --nav-item-margin: 0rem 0rem 0rem 3rem;
     --nav-item-link-hover: var(--color-primary);
 }
 .footer
