--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -45,8 +45,8 @@ a:active
 ul .row
 {
     margin: 0;
-    padding: none;
-    list-style: none;
+    padding: 0;
+    list-style-type: none;
 }
 .col-1-3
 {
@@ -188,7 +188,7 @@ ul .row
 }
 .footer-copyright
 {
-    margin: none;
+    margin: 0;
     font-size: var(--font-size-small);
     color: var(--text-color);    
 }
