--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -42,11 +42,11 @@ a:active
 {
     background-color: var(--color-light-grey);
 }
-ul .row
+ul.row
 {
     margin: 0;
     padding: 0;
-    list-style-type: none;
+    list-style: none;
 }
 .col-1-3
 {
