--- a/0x02-CSS_advanced/styles/28-style.css
+++ b/0x02-CSS_advanced/styles/28-style.css
@@ -304,7 +304,7 @@ ul.row
 {
     padding: 10rem 40rem 2rem 0
 }
-.header
+header
 {
     padding: var(--header-padding);
 }
@@ -316,7 +316,7 @@ ul.row
 {
     display: var(--header-logo-link-display);
     position: var(--header-logo-link-position);
-    background-position-x: var(--header-logo-link-left);
-    background-position-y: var(--header-logo-link-top);
+    left: var(--header-logo-link-left);
+    top: var(--header-logo-link-top);
 }
 
