--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -177,7 +177,7 @@ ul.row
     width: 0;
     height: 0.2rem;
 }
-.nav .nav-link::after
+.nav .nav-item:hover .nav-link::after
 {
     background-color: var(--color-primary);
     width: 1em;
