--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -180,7 +180,7 @@ ul.row
 .nav .nav-item:hover .nav-link::before
 {
     background-color: var(--color-primary);
-    width: 1em;
+    width: 100%;
 }
 :root{
     --color-primary: #d73953;
