--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -339,7 +339,7 @@ ul.row
     position: relative;
     overflow: hidden;
 }
-.card-work .card-image
+.card-work .card-image img
 {
     height: 30rem;
     width: 100%;
