--- a/0x02-CSS_advanced/styles/32-style.css
+++ b/0x02-CSS_advanced/styles/32-style.css
@@ -373,7 +373,7 @@ ul.row
     left: -0.1rem;
     right: -0.1rem;
     z-index: 1;
-    transition: var(–transition-duration) var(transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 .card-work:hover .card-inner
 {
@@ -409,7 +409,7 @@ ul.row
 .card-work:hover .card-image
 {
     transform: scale(1.2);
-    transition: var(–transition-duration) var(transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 .card-work:hover .card-outer
 {
@@ -417,5 +417,5 @@ ul.row
 }
 .nav .nav-link::before
 {
-    transition: var(–transition-duration) var(transition-cubic-bezier) ;
+    transition: var(--transition-duration) var(--transition-cubic-bezier) ;
 }
