--- a/0x03-sass_scss/7-nested_deeper.scss
+++ b/0x03-sass_scss/7-nested_deeper.scss
@@ -12,7 +12,7 @@ body
     h1
     {
         font-size: 16px; 
-        .smaller 
+        &.smaller 
         {
             font-size: 12px; 
         }
