--- a/0x03-sass_scss/8-mixin_margins.scss
+++ b/0x03-sass_scss/8-mixin_margins.scss
@@ -8,7 +8,7 @@ Sass file that assigns:
 @mixin margin($property) 
 {
     margin-left: $property;
-    margin-left: $property;
+    margin-right: $property;
 }
 body 
 {
