--- a/0x03-sass_scss/100-loop_col.scss
+++ b/0x03-sass_scss/100-loop_col.scss
@@ -8,7 +8,7 @@ col-4 with width equals to 25%
 You must create .col-* class from 1 to 4
 You must use a @for statement
 */
-@for $i from 1 to 4 
+@for $i from 1 through 4 
 {
     .col-#{$i}
     {
