--- a/0x04-flexbox/13-styles.css
+++ b/0x04-flexbox/13-styles.css
@@ -567,7 +567,7 @@
   /* Post Meta
     ============================= */
     .post-meta-list {
-        -ms-flex-direction: column;
+        flex-direction: column;
     }
     .post-meta-list strong {
         color: var(--color-primary);
