--- a/0x05-form/05-styles.css
+++ b/0x05-form/05-styles.css
@@ -899,7 +899,7 @@ input[type="text"]:focus, input[type="email"]:focus, textarea:focus {
     overflow: hidden;
 }
 
-.form-group .form-help:focus-within {
+.form-group:focus-within .form-help {
     max-height: 20rem;
     margin: .4rem 0 0;
 }
