--- a/0x00-sass_scss/6-nested_hover.scss
+++ b/0x00-sass_scss/6-nested_hover.scss
@@ -1,8 +1,14 @@
-/* Assigns color on hover. */
-button {
-  color: #FF0000;
-
-  &:hover {
-    color: #00FF00;
-  }
+/* 
+ Sass file that assigns:
+- Text color #FF0000 to button tags
+- When the user hovers over button tags, text color should change to #00FF00
+- You must use nested declarations
+*/
+button
+{
+    color: #FF0000;
+    &:hover
+    {
+        color: #00FF00;
+    }
 }
