--- a/0x00-sass_scss/6-nested_hover.scss
+++ b/0x00-sass_scss/6-nested_hover.scss
@@ -4,11 +4,13 @@
 - When the user hovers over button tags, text color should change to #00FF00
 - You must use nested declarations
 */
+$color1 = #FF0000;
+$color2 = #00FF00;
 button
 {
-    color: #FF0000;
+    color: $color1;
     &:hover
     {
-        color: #00FF00;
+        color: $color2;
     }
 }
